updated about-me and included resume pdf

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,6 +12,7 @@
 @import "./portfolio-form.scss";
 @import "./portfolio-sidebar.scss";
 @import "./portfolio-detail.scss";
+@import "./about.scss";
 @import "./auth.scss";
 @import "./blog.scss";
 @import "./loaders.scss";
@@ -19,4 +20,5 @@
 @import "./modals.scss";
 @import "./react-draft-wysiwyg.scss";
 @import "./rich-text-editor.scss";
+@import "./resume-modal.scss"
 
