--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,5 +1,6 @@
-$teal: #26bfd4;
-$dark-teal: #207b88;
+// Not all variable names match colors, due to alterations.
+$teal: #ff6961;
+$dark-teal: maroon;
 $charcoal: #42454a;
 $offwhite: #f6f6f6;
 $blue: #008dff;
