--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -4,12 +4,12 @@
     margin-top: 5vh;
     
     // grid-gap: 20px;
-    // height: 100%;
+    height: 100%;
 
     .content-page-wrapper {
         display: grid;
         grid-auto-columns: 50vw 50vw;
-        height: 70vh;
+        height: 60vh;
         
 
         .bio-image-wrapper {
@@ -27,7 +27,7 @@
                 padding-right: 0;
                 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
                 max-width: 1500px;
-                max-height: 70vh;
+                max-height: 60vh;
                 
                 height: auto;
             }
@@ -85,12 +85,33 @@
                     margin: 0;
                     .bio-text-wrapper {
                         width: 90%;
-                        font-size: 1rem;
+                        margin-left: 5%;
+                        font-size: 1.1rem;
                         margin: 0;
                         .text-content {
                             text-align: left;
                             width: 100%;
                             margin: 0;
+                            font-family: Arial, Helvetica, sans-serif;
+                        }
+                    }
+                    .contact-me-wrapper {
+                        display: flex;
+                        flex-direction: column;
+                        margin-left: 33%;
+                        .bullet-point-group {
+                            display: flex;
+                            margin-top: 10px;
+                            .icon {
+                                color: $teal;
+                                font-size: 2rem;
+                            }
+                            .text {
+                                margin-left: 5px;
+                                font-size: 2rem;
+                                font-weight: 800;
+                                font-family: 'Major Mono Display', monospace;
+                            }
                         }
                     }
                 }
@@ -120,7 +141,7 @@
     }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 1000px) {
     .outer-wrapper {
         width: 100vw;
         .content-page-wrapper {
